--- a/requirements.txt
+++ b/requirements.txt
@@ -152,7 +152,7 @@ snowflake-sqlalchemy==1.5.1
 sortedcontainers==2.4.0
 SpeechRecognition==3.10.4
 SQLAlchemy==1.4.52
-#pysqlite3-binary
+pysqlite3-binary
 stack-data==0.6.3
 starlette==0.37.2
 streamlit==1.33.0
